tests/golden/compile-pass/expr_struct_literal_ambiguity.rua
struct Choice {
    value: i64,
}

fn choose(flag: bool) -> Choice {
    if flag {
        Choice { value: 1 }
    } else {
        Choice { value: 2 }
    }
}
