tests/golden/compile-fail/struct_missing_field.rua
struct Point { x: i64, y: i64 }

fn origin() -> Point {
    Point { x: 0 }
}
